# cql-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_jap.md  config.toml  deploy.sh  install.sh  install_src.sh  package.sh
src/: completions.rs  consts.rs  cqlsh.rs  formatting.rs  handlers.rs  lib.rs  lsp.rs  main.rs  setup.rs  tree_sitter.rs  utils.rs
