[package]
name = "cql-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
scylla = { version = "1.1.0", features = ["full-serialization"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp = "0.20.0"

[lib]
path = "src/lib.rs"
name = "cql_lsp"
