[package]
name = "cql_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
fern = "0.7.1"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
scylla = { version = "1.1.0", features = ["full-serialization"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp = "0.20.0"

[lib]
path = "src/lib.rs"
name = "cql_lsp"
